# AccuSleePy

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml  release.yml
accusleepy/: __init__.py  __main__.py  bouts.py  brain_state_set.py  classification.py  config.json  config.py  constants.py  default_config.json  fileio.py  main.py  misc.py  models.py  multitaper.py  real_time_scoring_example.py  services.py  signal_processing.py  temperature_scaling.py  validation.py
accusleepy/gui/: Window0.py  Window1.py  __init__.py  dialogs.py  main.py  manual_scoring.py  manual_scoring_scratch.py  mplwidget.py  primary_window.py  primary_window.ui  recording_manager.py  resources.qrc  resources_rc.py  settings_widget.py  viewer_window.py  viewer_window.ui  window0.ui  window1.ui
accusleepy/gui/text/: config_guide.txt  dev_guide.md  main_guide.md  main_guide.txt  main_guide_text.py  main_manual.txt  manual_scoring_guide.md  manual_scoring_guide.txt
accusleepy/settings/: brain_states.csv
accusleepy/utils/: classification.py  constants.py  fileio.py  misc.py  models.py  multitaper.py  multitaper_spectrogram.py  signal_processing.py
tests/: conftest.py  test_bout_duration.py  test_bouts.py  test_brain_state_set.py  test_classification.py  test_fileio.py  test_manual_scoring.py  test_models.py  test_primary_window.py  test_services.py  test_signal_processing.py  test_temperature_scaling.py  test_validation.py
tests/gui/: __init__.py  conftest.py  test_main_window_actions.py  test_manual_scoring_workflow.py  test_window_actions.py
tests/integration/: __init__.py  conftest.py  test_gui_integration.py  test_scoring_pipeline.py  test_training_pipeline.py
