[project]
name = "accusleepy"
version = "0.7.3"
description = "Python implementation of AccuSleep"
authors = [
    {name = "Zeke Barger",email = "zekebarger@gmail.com"}
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<1.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pyside6 (>=6.9.0, <6.9.3)",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
ruff = ">=0.11.2,<0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["*.ipynb"]
