[project]
name = "accusleepy"
version = "0.10.1"
description = "Python implementation of AccuSleep"
authors = [
    {name = "Zeke Barger",email = "zekebarger@gmail.com"}
]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<1.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.2.0,<5.0.0"
pytest = ">=8.3.5,<9.0.0"
pytest-qt = ">=4.4.0,<5.0.0"
ruff = ">=0.11.2,<0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
markers = [
    "gui: marks tests as GUI tests (may require display or xvfb)",
]
qt_api = "pyside6"
